<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:hint="@string/weightInputMetric"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weightInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/heightInputMetric"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/bmiValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bmiOutput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/underweightbmi"

        android:contentDescription="@string/bmi_output" />

    <TextView
        android:id="@+id/bmiOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculateButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="32dp"
        android:text="@string/bmi" />
</RelativeLayout>